src/tests/errors/11_sealed_inheritance/source.z42
namespace Demo;

sealed class Base {
    int X;
}

class Derived : Base {
    // Cannot inherit from sealed class — should be a compile error
}

void Main() {
    var d = new Derived();
}
